# i3ipc-doodle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_build_dir.sh  doodle_config.hpp.in
.config/doodle/: doodlerc
client/: CMakeLists.txt  cli.cpp  cli.hpp  command.cpp  command.hpp  commands.cpp  commands.hpp  io_watcher.hpp  ipc_socket.cpp  ipc_socket.hpp  parse_command.cpp  parse_command.hpp  socket_watcher.cpp  socket_watcher.hpp
cmake/Modules/: FindCONFUSE.cmake  FindGDK-PIXBUF.cmake  FindGOBJECT.cmake  FindJSONCPP.cmake  FindLIBEDIT.cmake  FindLIBUV.cmake  FindNOTIFY.cmake  FindXCB.cmake
config/doodle/: doodlerc
config/doodle/jobs/: scratch.job
daemon/: CMakeLists.txt  doodle.cpp  doodle.hpp  doodle_client_watcher.cpp  doodle_client_watcher.hpp  doodle_diagnostics.cpp  doodle_socket_watcher.cpp  doodle_socket_watcher.hpp  doodle_terminal.cpp  doodle_terminal.hpp  fixed_array.hpp  job.cpp  job.hpp  job_action.cpp  job_action.hpp  logstream.hpp  main.cpp  main.hpp  window_matching.cpp  window_matching.hpp  window_matching_diagnostics.hpp
daemon/.config/doodle/: doodlerc
daemon/.config/doodle/jobs/: project.job  scratch.job  scratch_backup
daemon/test/: CMakeLists.txt  test_doodle.hpp
daemon_bak/: doodle.cpp  doodle_client_watcher.cpp  doodle_client_watcher.hpp  doodle_diagnostics.hpp  doodle_socket_watcher.cpp  doodle_socket_watcher.hpp  job.hpp  job_action.hpp  main.cpp  main.hpp
daemon_bak/.config/doodle/: doodlerc
daemon_bak/.config/doodle/jobs/: project  project.times  scratch.job  scratch.times
daemon_bak/test/: CMakeLists.txt  test_doodle.hpp  testplan.md
libs/: CMakeLists.txt
libs/commands/: CMakeLists.txt  commands.hpp
libs/sockets/: sockets.cpp  sockets.hpp
libs/streamlib/: CMakeLists.txt  console_stream.cpp  console_stream.hpp  notify_stream.cpp  notify_stream.hpp
misc/valgrind_suppressions/: Makefile  buggy.cpp  grindmerge  libnotify_minimal.cpp
src/: .nvimrc  CMakeLists.txt  TutorialConfig.h.in  client.cpp  client.hpp  commands.hpp  daemon.cpp  daemon.hpp  doodle.cpp  doodle.hpp  doodle_config.hpp.in  doodle_configuration  fixed_array.hpp  jason.cpp  jason.hpp  job.cpp  job.hpp  logstream.cpp  logstream.hpp  main.cpp  main.hpp  timer.cpp  timer.hpp  timespan.cpp  timespan.hpp  tutorial.cxx  window_matching.cpp  window_matching.hpp
src/.config/doodle/: doodlerc
src/.config/doodle/jobs/: project  scratch
src/MathFunctions/: MathFunctions.h  mysqrt.cxx
src/cmake/Modules/: FindLIBEVENT.cmake  FindSYSLOG.cmake
systemd/: suspend_doodle.sh
test/: CMakeLists.txt  test_config.hpp  test_config.hpp.in  test_doodle.hpp  todo
